Added possibility to a parallel test build and increased permgen for tests